# LifeOS

./: .env.example  .gitignore  =3.6.0  =4.12.0  CLAUDE.md  README.md  future.md  mcp_server.py  pyproject.toml  requirements.txt
api/: main.py
config/: crm_config.py  crm_mappings.yaml  crm_settings.yaml  family_members.example.json  gdoc_sync.yaml  gsheet_sync.yaml  people_config.py  relationship_weights.py  settings.py
docs/: 2026-02-01-crm-integration-implementation.md  CRM-ARCHITECTURE.md  CRM-Phase-10-UI-Polish.md  LifeOS Backlog.md  LifeOS PRD.md  SYSTEM_ARCHITECTURE.md
scripts/: authenticate_google.py  batch_extract_facts.py  chromadb-watchdog.sh  chromadb.sh  cleanup_imessage_data.py  cleanup_marketing_emails.py  cleanup_orphaned_records.py  create_relationship.py  deploy.sh  fix_concatenated_names.py  fix_linkedin_from_csv.py  fix_linkedin_mismatches.py  fix_orphaned_gmail_interactions.py  fix_taylor_walker.py  fix_vault_matches.py  import_calendar_participants.py  import_phone_contacts.py  launchd-wrapper.sh  link_imessage_entities.py  link_slack_entities.py  merge_people.py  migrate_interactions.py  migrate_people_v1_to_v2.py  migrate_to_crm.py  monitor_slack_sync.sh  populate_source_entities.py  post-commit  pre-commit  run_all_syncs.py  run_comprehensive_sync.py  server.sh  service.sh  split_person.py  sync_apple_contacts.py  sync_commitments.py  sync_contacts_csv.py  sync_gmail_calendar_interactions.py  sync_imessage_interactions.py  sync_person_stats.py  sync_phone_calls.py  (+5 more)
tests/: conftest.py  qualitative_tests.md  qualitative_tests.md.example  (+60 more)
(+139 files in other folders)
